Upgrading a project from Java 8 to Java 12