@@ -9,7 +9,8 @@ buildscript {
         }
     }
     dependencies {
-        classpath "org.springframework.boot:spring-boot-gradle-plugin:2.1.6.RELEASE"    }
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:2.1.6.RELEASE"
+    }
 }
 
 apply plugin: 'java'
@@ -20,7 +21,20 @@ apply plugin: 'io.spring.dependency-management'
 group 'com.servletProject.librarySystem'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
+sourceCompatibility = JavaVersion.VERSION_12
+targetCompatibility = JavaVersion.VERSION_12
+
+compileJava {
+    options.compilerArgs = ['--enable-preview']
+}
+
+compileTestJava {
+    options.compilerArgs = ['--enable-preview']
+}
+
+test {
+    jvmArgs(['--enable-preview'])
+}
 
 repositories {
     mavenCentral()
@@ -36,12 +50,13 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-security')
     compile('com.auth0:java-jwt:3.4.0')
     compile('org.projectlombok:lombok')
+    annotationProcessor('org.projectlombok:lombok')
     compile('org.postgresql:postgresql')
     compile('org.liquibase:liquibase-core')
     compile('org.thymeleaf.extras:thymeleaf-extras-springsecurity5')
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
-    testCompile ('org.springframework.security:spring-security-test')
-    testCompile ('junit:junit')
-    testImplementation ('org.mockito:mockito-core')
+    testCompile('org.springframework.security:spring-security-test')
+    testCompile('junit:junit')
+    testImplementation('org.mockito:mockito-core')
 }
